[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/area/AreaDirectional.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/arrow_all.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/arrow.png" type="Texture" id=3]



[sub_resource type="BoxShape" id=1]

[node name="AreaDirectional" type="Area"]
transform = Transform( 1, 0, 0, 0, 1.62522e-06, -1, 0, 1, 1.62522e-06, 0, 0, 0 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Guides" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )

[node name="ArrowH" type="Sprite3D" parent="Guides"]
transform = Transform( -1.62921e-07, 1, -3.25841e-07, 1.6292e-07, -3.25841e-07, -1, -1, -1.62921e-07, -1.6292e-07, 0, 0, 0 )
visible = false
opacity = 0.6
texture = ExtResource( 3 )

[node name="ArrowV" type="Sprite3D" parent="Guides"]
transform = Transform( 1.62522e-06, 1.95106e-06, 1, 1.62522e-06, 1, -1.95106e-06, -1, 1.62522e-06, 1.62522e-06, 0, 0, 0 )
visible = false
opacity = 0.6
texture = ExtResource( 3 )

[node name="ArrowAll" type="Sprite3D" parent="Guides"]
transform = Transform( -1.62921e-07, 1, -3.25841e-07, 1.6292e-07, -3.25841e-07, -1, -1, -1.62921e-07, -1.6292e-07, 0, 0, 0 )
opacity = 0.6
texture = ExtResource( 2 )
